--- a/INSTALL
+++ b/INSTALL
@@ -1,9 +1,9 @@
 Building Bitcoin
 
-See doc/readme-qt.rst for instructions on building Frozen-Qt,
+See doc/readme-qt.rst for instructions on building Platinum-Qt,
 the intended-for-end-users, nice-graphical-interface, reference
-implementation of Frozen.
+implementation of Platinum.
 
 See doc/build-*.txt for instructions on building frozend,
 the intended-for-services, no-graphical-interface, reference
-implementation of Frozen.
+implementation of Platinum.
